--- a/art12/templates/summary/content/ms.html
+++ b/art12/templates/summary/content/ms.html
@@ -1,6 +1,6 @@
 {% if row.envelope and row.filename %}
   {% set s_name, s_info, s_type = get_title_for_country(row) %}
-  {% set original_url = generate_original_url(row) %}
+  {% set original_url = get_original_url(row) %}
   <td class="border" data-tooltip="html">
     <div class="tooltip-html hidden">
       <div class="extra-padding">
