--- a/art12/templates/layout_popup.html
+++ b/art12/templates/layout_popup.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}"/>
 	{% endassets %}
   <link rel="stylesheet" type="text/css" media="screen"
-        href="http://www.eionet.europa.eu/styles/eionet2007/screen.css">
+        href="https://www.eionet.europa.eu/styles/eionet2007/screen.css">
 
   <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed"
         rel="stylesheet" type="text/css">
