[refs #80357] Set new wordings for summary and progress pages

--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -59,6 +59,13 @@
     which are listed on mouse over the Bird status symbol. The EU trends were
     assessed at the subspecies level. The EU trends can cover several
     subspecific units, which are listed on mouse over the Trend symbol.
+
+    <p>
+      In italics, additional assessment at the subspecies or population
+      level (available only for subspecies listed in the Annexes of
+      the Birds Directive).
+    </p>
+
   {% else %}
     Please note that additional information on mouse over values and trends
     stands for the quality of the underlying data as reported by Member States.
