--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -80,8 +80,9 @@
         the same level as the current selection (species and subspecific unit).
       </p>
       <p>
-        In italics additional assessment at the subspecies level for
-        subspecies listed in the Annexes of the Birds Directive.
+        In italics, additional assessment at the subspecies or population
+        level (available only for subspecies listed in the Annexes of
+        the Birds Directive).
       </p>
     {% else %}
       <p><b>Please select a species.</b></p>
