--- a/art12/templates/layout.html
+++ b/art12/templates/layout.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" type="text/css" media="screen"
         href="https://www.eionet.europa.eu/styles/eionet2007/screen.css">
 
-  <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed"
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed"
         rel="stylesheet" type="text/css">
 {% endblock %}
 
