--- a/art12/static/css/art17-ui.css
+++ b/art12/static/css/art17-ui.css
@@ -1609,9 +1609,43 @@ td.form-error-td .select:hover {
 
 .offset_top_label {
   float: left;
-  margin-top: 27px;
-  background-image: unset;
-  background: unset;
+  margin-top: 24px;
+}
+
+/* FLASH MESSAGES */
+.flashes {
+  margin: 0;
+  padding: 0;
+  top: 0;
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  z-index: 5000;
+}
+.flashes > li {
+  -webkit-transition: all 360ms ease-in-out;
+  -moz-transition: all 360ms ease-in-out;
+  -ms-transition: all 360ms ease-in-out;
+  -o-transition: all 360ms ease-in-out;
+  transition: all 360ms ease-in-out;
+
+  -webkit-box-shadow: 0 8px 4px -6px rgba(0,0,0,0.25);
+  box-shadow: 0 8px 4px -6px rgba(0,0,0,0.25);
+
+  opacity: 0;
+  margin-top: -50px;
+}
+
+.flashes > li.show {
+  opacity: 1;
+  margin-top: 12px;
+}
+.flashmessage {
+  display: inline-block;
+  padding: 3px 8px;
+  background: #f9de62;
+  border: #eebb20;
+  border-radius: 3px;
 }
 
 /* TABLE ROW HIGHLIGHTS HIGHLIGHTS */
