--- a/art12/templates/common/_macros.html
+++ b/art12/templates/common/_macros.html
@@ -1,13 +1,14 @@
 {% macro breadcrumbs(page_list) %}
   {%- for label, url in page_list %}
     {%- set id = 'breadcrumbs-current' if loop.last else '' %}
-    <li {% if loop.first %} id='breadcrumbs-home' {% endif %}>
-      {% if id %}
-        <span id="{{ id }}">{{ label }}</span>
-      {% else %}
-        <a href="{{ url }}">{{ label }}</a>
+      {% if not loop.first %}
+        >
       {% endif %}
-    </li>
+      {% if id %}
+        <span id="{{ id }}"> {{ label }}</span>
+      {% else %}
+        <a href="{{ url }}"> {{ label }}</a>
+      {% endif %}
   {%- endfor %}
 {%- endmacro %}
 
