--- a/art12/templates/layout.html
+++ b/art12/templates/layout.html
@@ -23,7 +23,9 @@
     {% if messages %}
       <ul class=flashes>
         {% for category, message in messages %}
-          <li class="flashmessage flashmessage-{{ category }}">{{ message }}</li>
+          {% if loop.last %}
+            <li class="flashmessage flashmessage-{{ category }}">{{ message }}</li>
+          {% endif %}
         {% endfor %}
       </ul>
     {% endif %}
