--- a/eea_integration/auth/templates/auth/register_ldap.html
+++ b/eea_integration/auth/templates/auth/register_ldap.html
@@ -24,11 +24,16 @@
             Name:
             <b>{{ register_user_form.name.data }}</b>
           </p>
-          <p>
-            Email:
-            <a href="mailto:{{ register_user_form.email.data }}">{{ register_user_form.email.data }}</a>
-          </p>
-
+          {% if register_user_form.email.data %}
+            <p>
+              Email:
+              <a href="mailto:{{ register_user_form.email.data }}">{{ register_user_form.email.data }}</a>
+            </p>
+          {% else %}
+            <div class="form-group">
+              {{ render_field_with_errors(register_user_form.email) }}
+            </div>
+          {% endif %}
 
           {{ register_user_form.hidden_tag() }}
           {{ register_user_form.MS() }}
