--- a/eea_integration/layout/templates/layout_default.html
+++ b/eea_integration/layout/templates/layout_default.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
-<html>
+<meta content="text/html; charset=utf-8" http-equiv="Content-Type"/>
+  <head>
+    <title>{% block title %}{% endblock %}</title>
+    {% block extra_head %}{% endblock %}
+  </head>
 
-<head>
-  <title>{% block title %}{% endblock %}</title>
-  {% block extra_head %}{% endblock %}
-</head>
+  <body>
+    {%- block afterbody %}{% endblock -%}
+    <div class="header">
+      <h1 style="color:#006699; font-weight:600; font-size:28px">
+        Article 12 web tool
+      </h1>
 
-<body class="fullscreen">
-{%- block afterbody %}{% endblock -%}
+      <div class="login">
+        {% if current_user.is_authenticated() %}
+          <a id="loginlink" href="{{ url_for('views.logout') }}">Log out</a>
+          <span id="profilelink">You are logged in as <b>{{ current_user.id }}</b></span>
+        {% else %}
+          <a id="loginlink" href="{{ url_for('views.login') }}">Log in</a>
+        {% endif %}
+      </div>
+    </div>
 
-<div>
-  {% block breadcrumbs %}
-  {% endblock %}
-</div>
+    <div class="modal-bg hidden">
+        <div class="modal">
+          <iframe frameborder="0" width="100%" height="100%"></iframe>
+        </div>
+        <button onclick='closeModal()' class="close">Close <i class="fa fa-times"></i></button>
+    </div>
 
-<div id="container">
-  <div id="workarea">
-    {% block before_content %}{% endblock %}
-    {% block content %}{% endblock content %}
-  </div>
-</div>
+    <div class="breadcrumbs">
+      {% block breadcrumbs %}
+      {% endblock %}
+    </div>
 
-{% block scripts %}{% endblock %}
+    <div class="container">
+      {% block before_content %}{% endblock %}
+      {% block content %}{% endblock content %}
+    </div>
+
+{% block scripts %} {% endblock %}
 </body>
 </html>
