--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -74,6 +74,6 @@
     </ul>
   {% else %}
     <h2>Accounts</h2>
-    Forgot your password? <a href='{{ SCRIPT_NAME }}/auth/recover_password'>Recover password</a></li>
+    Forgot your password? <a href='{{ EEA_PASSWORD_RESET }}'>Recover password</a>
   {% endif %}
 {% endblock content %}
