Fixed table styling

--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -15,8 +15,7 @@
   <th colspan="8">Breeding Population</th>
   <th colspan="8">Breeding Range</th>
   <th colspan="8">Winter Population</th>
-  <th colspan="4" rowspan="2">Areas from gridded maps (km<sup>2</sup>)</th>
-  <th rowspan="2"></th>
+  <th colspan="5" rowspan="2">Areas from gridded maps (km<sup>2</sup>)</th>
 </tr>
 
 <tr>
@@ -65,7 +64,7 @@
     % MS
   </th>
   <th data-tooltip-place="sw" title="Area of breeding range from GIS data" class="gray-cell">Range</th>
-  <th data-tooltip-place="sw" title="Percentage of the surface area of GIS range per MS" class="gray-cell">
+  <th data-tooltip-place="sw" title="Percentage of the surface area of GIS range per MS" class="gray-cell" colspan="2">
     % MS
   </th>
 </tr>
