--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,3 +1,9 @@
+<style>
+  .center {
+  text-align: center
+  }
+</style>
+
 <td class="center border_left">
 	{{ row.distribution_grid_area|int or '' }}
 </td>
@@ -7,6 +13,6 @@
 <td class="center">
 	{{ row.range_grid_area|int or '' }}
 </td>
-<td class="center">
+<td class="center" colspan="2">
 	{{ row.percentage_range_grid_area|float or '' }}
 </td>
