--- a/art12/templates/common/species_table_header_2018.html
+++ b/art12/templates/common/species_table_header_2018.html
@@ -14,7 +14,7 @@
     {% endif %}
     <th colspan="15">Breeding population</th>
     <th colspan="10">Breeding distribution</th>
-    <th colspan="15">Winter population</th>
+    <th colspan="16">Winter population</th>
     <th colspan="2" rowspan="2">Breeding area from<br>gridded maps (km<sup>2</sup>)</th>
     <th colspan="1" rowspan="2">Ssp. / subsp. unit</th>
   </tr>
@@ -25,7 +25,7 @@
     <th colspan="3">Distribution size</th>
     <th colspan="7">Distribution trend</th>
     <th colspan="8">Population size</th>
-    <th colspan="7">Population trend</th>
+    <th colspan="8">Population trend</th>
   </tr>
 
   <tr>
@@ -142,6 +142,7 @@
                x: unknown">LT direction</th>
     <th title="Long-term trend magnitude (%) - min – max (best single value)">LT magnitude</th>
     <th title='Additional population trend information available, if "#"'>&#8505;</th>
+    <th title=''>Status</th>
 
     {# Breeding area from gridded maps (km²) #}
     <th data-tooltip-place="sw" title="Area of breeding distribution from GIS data, in km<sup>2</sup>" class="gray-cell">Distrib.</th>
